[fix] 本地任务启动过程，日志目录重新定位到appwork目录中，合并开放的模块。